# study-python

./: README.MD
advanced-python-syntax/F-strings/: main.py
advanced-python-syntax/anon-func-lambda/: main.py
advanced-python-syntax/args-kwargs/: main.py
advanced-python-syntax/debuger/: main.py
advanced-python-syntax/decorators/: log.txt  main.py
advanced-python-syntax/dinamic-typing/: main.py
advanced-python-syntax/exceptions/: main.py  not-funny-jokes.txt
advanced-python-syntax/file's-work/: main.py  text_file.txt  text_lib.py
advanced-python-syntax/iterators/: main.py
base-python-syntax/array-append/: main.py
base-python-syntax/array-list-tuple/: main.py
base-python-syntax/cycles-while-for/: main.py
base-python-syntax/dictionary-set/: main.py
learn_pytest/: pyproject.toml
learn_pytest/auto_watering_system/: auto_watering_system.py
learn_pytest/calculator_app/: calc.py
learn_pytest/my_funcs/: file_workers.py  utils.py
learn_pytest/some_files/: db_helper.py
learn_pytest/task_manager/: task_manager.py
learn_pytest/tests/: test_division_func.py
learn_pytest/tests/test_auto_watering_system/: conftest.py  test_auto_watering_system.py
learn_pytest/tests/test_calculator/: test_calculator.py
learn_pytest/tests/test_file_workers/: conftest.py  test_file_workers.py
learn_pytest/tests/test_task_manager/: conftest.py  test_task.py  test_task_list.py
learn_pytest/tests/test_web_client/: test_some_web_client.py
learn_pytest/web_app/: some_web_client.py
process-thread-async/: blocking_process.py  fork_vs_process.py  time_difference.py
(+31 files in other folders)
